--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <select name="options" id="options">
         <option value="default">Choose Option</option>
         <option value="id">Quote's ID</option>
-        <option value="title">Quote's Title</option>
+        <option value="author">Quote's Author</option>
     </select>
     <div class="search">
         <input type="search" id="searchInput">
@@ -25,13 +25,19 @@
     <h1>Quote List</h1>
     <div class="content">
         <div class="shape of you" id="item1">
-            <img id="" src="../Spotify/asset/Type=Default, Cover=Album, Library=Cover2.png" alt="">
+            <img id="" src="img/user1.jpg" alt="">
+            <h1 id="quote1"></h1>
+            <p id="author1"></p>
         </div>
         <div class="sharen" id="item2">
-            <img id="" src="../Spotify/asset/Type=Default, Cover=Album, Library=Cover10.png" alt="">
+            <img id="" src="img/user2.jpg" alt="">
+            <h1 id="quote2"></h1>
+            <p id="author2"></p>
         </div>
         <div class="lady" id="item3" >
-            <img id="" src="../Spotify/asset/Type=Default, Cover=Album, Library=Cover8.png" alt="">
+            <img id="" src="img/user3.jpg" alt="">
+            <h1 id="quote3"></h1>
+            <p id="author3"></p>
         </div>
     </div>
     
